# CNN-SVO

./: .gitignore  README.md
eval/: evaluate_ate_scale.py
eval/ground_truth/ground_truth_robotcar/: 00.txt  00_times.txt  01.txt  01_times.txt  02.txt  02_times.txt  03.txt  03_times.txt  04.txt  04_times.txt  05.txt  05_times.txt  06.txt  06_times.txt  07.txt  07_times.txt  08.txt  08_times.txt  README.txt
eval/sample/: seq00_CNN_SVO_KITTI_SAMPLE.txt
rpg_svo/rqt_svo/src/rqt_svo/: svo_widget.py
rpg_svo/svo/: CMakeLists.txt  package.xml
rpg_svo/svo/CMakeModules/: FindTensorFlow.cmake
rpg_svo/svo/include/svo/: bundle_adjustment.h  config.h  depth_filter.h  feature.h  feature_detection.h  frame.h  frame_handler_monodepth.h  frame_handler_online.h  initialization.h  initialization_monodepth.h  map.h  point.h  pose_optimizer.h  read_npy.h  reprojector.h  sparse_img_align.h
rpg_svo/svo/src/: bundle_adjustment.cpp  config.cpp  depth_filter.cpp  feature_detection.cpp  frame.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  frame_handler_monodepth.cpp  frame_handler_old.cpp  frame_handler_online.cpp  initialization.cpp  initialization_monodepth.cpp  map.cpp  matcher.cpp  point.cpp  pose_optimizer.cpp  sparse_img_align.cpp
rpg_svo/svo_ros/: CMakeLists.txt  rviz_config.rviz  rviz_kitti.rviz
rpg_svo/svo_ros/include/svo_ros/: read_npy.h  visualizer_monodepth.h  visualizer_online.h
rpg_svo/svo_ros/launch/: test_rig3.launch
rpg_svo/svo_ros/launch/offline/: kittiOffline00-02.launch  kittiOffline03.launch  kittiOffline04-12.launch  oxfordRobotcarOffline.launch
rpg_svo/svo_ros/launch/online/: kittiOnline00-02.launch  kittiOnline03.launch  kittiOnline04-12.launch  oxfordRobotcarOnline.launch
rpg_svo/svo_ros/param/: camera_kitti00-02.yaml  camera_kitti03.yaml  camera_kitti04-12.yaml  camera_oxford_robotcar.yaml  vo_accurate.yaml  vo_kitti.yaml
rpg_svo/svo_ros/src/: test_readnpy.cpp  visualizer_monodepth.cpp  visualizer_online.cpp  vo_monodepth_offline.cpp  vo_monodepth_online.cpp  vo_node.cpp
rpg_vikit/: log.txt
rpg_vikit/vikit_common/: CMakeLists.txt  package.xml
rpg_vikit/vikit_common/include/vikit/: abstract_camera.h  atan_camera.h  blender_utils.h  file_reader.h  file_reader_types.h  homography.h  img_align.h  kitti_pose_reader.h  math_utils.h  nlls_solver.h  nlls_solver_impl.hpp  omni_camera.h  param_loader.h  pinhole_camera.h  ringbuffer.h  robust_cost.h  sample.h  timer.h
rpg_vikit/vikit_common/src/: atan_camera.cpp  homography.cpp  img_align.cpp  math_utils.cpp  omni_camera.cpp  pinhole_camera.cpp  robust_cost.cpp  vision.cpp
rpg_vikit/vikit_common/test/: test_camera.cpp  test_patch_score.cpp
rpg_vikit/vikit_ros/: CMakeLists.txt
rpg_vikit/vikit_ros/include/vikit/: output_helper.h
